syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;


/*
    Live synthetic future quotes are SpiderRock implied futures quotes derived from roll prices.
*/    
message SyntheticFutureQuote {
    message PKey {
        
        ExpiryKey fkey = 10; // ccode + expiry
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    double bid_price = 100; // best implied future bid price (adjusted for option expiry)
    double ask_price = 103; // best implied future ask price (adjusted for option expiry)
    int32 bid_size = 106; // best implied future bid size
    int32 ask_size = 109; // best implied future ask size
    SyntheticSource bid_source = 112;
    SyntheticSource ask_source = 115;
    MarketStatus market_status = 118; // composite market status of all dependent markets
    int64 net_timestamp = 121; // most recent net timestamp of any market affecting this record
}


